# wyoming-kittentts

./: CLAUDE.md  Dockerfile  LICENSE  README.md  docker_run.sh  pyproject.toml
script/: com.kittentts.wyoming.plist  com.local.wyoming-kittentts.plist  install  run  service  setup  uninstall
wyoming_kittentts/: __main__.py  handler.py
