[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming-kittentts"
version = "0.3.0"
description = "Wyoming protocol server for KittenTTS"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "kittentts",
    "wyoming>=1.8.0",
    "zeroconf>=0.88.0",
    "numpy",
    "soundfile",
    "sentence-stream>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["wyoming_kittentts"]
exclude = ["script"]

[project.scripts]
wyoming-kittentts = "wyoming_kittentts.__main__:main"

[tool.uv.sources]
kittentts = { git = "https://github.com/KittenML/KittenTTS.git", tag = "0.8.1" }
